# Django-Widgets

./: .gitignore  MANIFEST.in  README.md  boot_django.py  load_tests.py  makemigrations.py  package.json  setup.cfg  setup.py  tsconfig.json  webpack.config.js
sample_site/sample_site/: settings.py  urls.py
sample_site/widgets_demo/: apps.py  urls.py
sample_site/widgets_demo/static/widgets_demo/: base.css  sources.txt
sample_site/widgets_demo/templates/widgets_demo/: lazy_image.html  sample_view.html
sample_site/widgets_demo/views/: __init__.py  file_selector.py  lazy_image.py  sample.py  segmentation_markup.py
src/widgets/: views.py
src/widgets/frontend/: SegmentationMarkup.ts  file_selector.ts
src/widgets/static/widgets/: SegmentationMarkup.css
src/widgets/templates/widgets/widgets/: FileSelectorWidget.html  SegmentationMarkupWidget.html
src/widgets/widgets/: __init__.py  file_selector.py  segmentation_markup.py
widgets/: urls.py  views.py
widgets/static/widgets/: file_selector.js
widgets/templates/widgets/: sample_view.html
widgets/templates/widgets/widgets/: FileSelectorWidget.html
widgets/widgets/: __init__.py  file_selector.py
