[metadata]
name = ToxicFrazzles-Django-Widgets
version = 0.0.1
description = Collection of form input widgets
long_description = file:README.rst
url = https://github.com/ToxicFrazzles/Django-Widgets
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Django :: 4.0

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.0
