[metadata]
name = Django-Widgets
version = 0.0.1
description = Collection of form input widgets
url = https://github.com/ToxicFrazzles/Django-Widgets
license = MIT

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
    wheel
install_requires =
    Django>=3.2
